@@ -190,19 +190,25 @@ if options.isMC:
         ),
         dataDistribution = cms.vdouble(
           ## the length has to be exactly the same as for the MC!
-          
+
+          ## from estimatePileupD.py for golden JSON up to run 166502
+          3.36441e+06, 6.50754e+06, 1.57837e+07, 2.75468e+07, 3.78054e+07, 4.31307e+07,
+          4.2414e+07, 3.68867e+07, 2.8917e+07, 2.07353e+07, 1.37572e+07, 8.52297e+06,
+          4.9674e+06, 2.74032e+06, 1.43822e+06, 721206, 346808, 160424,
+          71576.4, 30874.3, 12901.2, #5231.58, 2061.91, 790.889,
+
           ## from estimatePileupD.py for golden JSON up to run 165542
-          4.49103e+06, 7.50711e+06, 1.7013e+07, 2.77526e+07, 3.56721e+07, 3.82648e+07,
-          3.55386e+07, 2.93206e+07, 2.18974e+07, 1.50169e+07, 9.56312e+06, 5.70622e+06,
-          3.21393e+06, 1.71936e+06, 878374, 430566, 203380, 92934.5,
-          41228.6, 17815.2, 7520.35,# 3109.37, 1262.01, 503.739,
+#           4.49103e+06, 7.50711e+06, 1.7013e+07, 2.77526e+07, 3.56721e+07, 3.82648e+07,
+#           3.55386e+07, 2.93206e+07, 2.18974e+07, 1.50169e+07, 9.56312e+06, 5.70622e+06,
+#           3.21393e+06, 1.71936e+06, 878374, 430566, 203380, 92934.5,
+#           41228.6, 17815.2, 7520.35,# 3109.37, 1262.01, 503.739,
           #198.015, 76.7276, 29.3217, 11.0527, 4.10876, 1.50569,
           #0.543606, 0.193229, 0.0675766, 0.0232364, 0.00785103, 0.0026052,
           #0.000848637, 0.000271282, 8.50798e-05, 2.61736e-05, 7.8975e-06, 2.33716e-06,
           #6.78371e-07, 1.93133e-07, 5.39384e-08, 1.47793e-08, 3.97367e-09, 1.04856e-09,
           #2.71605e-10, 6.92423e-08, 0,
-          
-          
+
+
           ## from estimatePileupD.py for golden JSON up to run 163869
           #3.6124e+06, 5.7606e+06, 1.3047e+07, 2.12065e+07, 2.71345e+07, 2.89995e+07,
           #2.68765e+07, 2.21641e+07, 1.65695e+07, 1.13875e+07, 7.27332e+06, 4.35533e+06,
